# BMPs_3D_reconstruction

./: .gitignore  README.md  main.cpp
Qt_OctReconstruct/: GLWidget.cpp  GLWidget.h  Qt_OctReconstruct.pro  main.cpp  struct_rotation.h
Qt_bmp2bin_gui/: Qt_bmp2bin_gui.pro  lineinputdialog.cpp  lineinputdialog.h  lineinputdialog.ui  mainwindow.cpp  mainwindow.h  progressbardialog.cpp  progressbardialog.h  progressbardialog.ui  threadbmpreadprogress.cpp  threadbmpreadprogress.h
bmp2binary/: CMakeCache.txt  CMakeLists.txt  Makefile  bmp2binary.cbp  bmp2binary.cpp  bmp2binary.layout  cmake_install.cmake
bmp2csv/: CMakeLists.txt  bmp2csv.cpp
include/: bmp2binary.h  bmp2csv.h  struct_pixel.h
reconstruct/: CMakeLists.txt  main.cpp
